--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <div id="app"></div>
-  <script type="text/javascript" src="dist/bundle.js"></script>
+  <script src="/dist/bundle.js"></script>
 </body>
 
 </html>
